<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20dp"
  tools:context=".module_auth.activity.UserActivity">

  <CheckBox
    android:id="@+id/cb_isSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/et_password"
    android:text="@string/login_remember_user_id" />

  <EditText
    android:id="@+id/et_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/et_username"
    android:autofillHints="password"
    android:hint="@string/login_enter_password"
    android:inputType="textPassword" />

  <EditText
    android:id="@+id/et_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/iv_logo"
    android:autofillHints="name"
    android:hint="@string/login_enter_username"
    android:inputType="text" />


  <ImageView
    android:id="@+id/iv_logo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="100dp"
    android:paddingBottom="50dp"
    android:contentDescription="@string/logo_of_codenforce"
    android:src="@drawable/logo" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/cb_isSave"
    android:gravity="end">

    <Button
      android:id="@+id/btn_login"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="@dimen/btn_bottom_width"
      android:layout_height="@dimen/btn_bottom_height"
      android:background="@drawable/layout_card"
      android:text="@string/btn_login" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/ll_login_progress_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent01"
    android:orientation="horizontal"
    android:gravity="center"
    android:visibility="gone">

    <ProgressBar
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_marginRight="15dp"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Please Wait..."/>


  </LinearLayout>

</RelativeLayout>